# OSG-Neuron

./: CMakeLists.txt  main.cpp
header/: camera.h  light.h  matrixnode.h  neuronnode.h  shader.h  viewerwidget.h
libraries/: CMakeLists.txt  CMakeLists.txt~
libraries/include/: core.h  genrateString.h
libraries/include/common/: CommonFunctions
libraries/include/neuron/: base.h  baseNeuron.h  neuronMatrix.h  shaderNeuron.h  standNeuron.h
libraries/include/neuron/shader/: shader.h  standShader.h
libraries/include/random/: genrateString.h  numberGenrator.h
libraries/include/ui/: mainwindow.h  ui_mainwindow.h
libraries/src/: core.cpp
libraries/src/common/: CommonFunctions.cpp
libraries/src/neuron/: base.cpp  baseNeuron.cpp  neuronMatrix.cpp  shaderNeuron.cpp  standNeuron.cpp
libraries/src/neuron/shader/: shader.cpp  standShader.cpp
libraries/src/ui/: mainwindow.cpp
src/: camera.cpp  light.cpp  matrixnode.cpp  matrixnode.cpp.autosave  neuronnode.cpp  shader.cpp  viewerwidget.cpp
src/shader/: active.frag  active.vert  fragShader.frag  vertShader.vert
test/: CMakeLists.txt  main.cpp
test/Untitled Folder/: CMakeLists.txt
